--- a/legals.html
+++ b/legals.html
@@ -145,5 +145,18 @@
       <span id="contribution">webdesign: <a title="Werbeagentur Ansbach Webdesign" rel="nofollow" target="_blank" href="http://www.derkeim.com">Der Keim</a></span>
    </footer>
 
+   <script>
+      (function (i, s, o, g, r, a, m) {
+         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+         }, i[r].l = 1 * new Date(); a = s.createElement(o),
+         m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+      ga('create', 'UA-59246932-1', 'auto');
+      ga('set', 'anonymizeIp', true);
+      ga('send', 'pageview');
+   </script>
+
 </body>
 </html>
