--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
 
       <h4>We truly appreciate your support by spreading some code!</h4>
       <code>
-         &lt;a href=&quot;http://js.org&quot; <wbr />target=&quot;_blank&quot; <wbr />title=&quot;JS.ORG | JavaScript Community"&gt;<br>
-         &lt;img src=&quot;http://logo.js.org/png/vert_500.png&quot; <wbr />alt=&quot;JS.ORG Logo&quot;/&gt;<wbr />&lt;/a&gt;
+         &lt;a href=&quot;http://js.org&quot; <wbr/>target=&quot;_blank&quot; <wbr/>title=&quot;JS.ORG | JavaScript Community"&gt;<br>
+         &lt;img src=&quot;http://logo.js.org/dark_horz.png&quot; <wbr/>width=&quot;102&quot; <wbr/>alt=&quot;JS.ORG Logo&quot;/&gt;<wbr/>&lt;/a&gt;<br>
+         &lt;!-- alternatives [bright|dark]_[horz|vert|tiny].png (width[horz:102,vert:50,tiny:77]) --&gt;
       </code>
    </main>
 
