--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
    <title>JS.ORG | DNS</title>
    <meta name="description" content="free and short JS.ORG domains for GitHub Pages">
+   <meta name="google-site-verification" content="FP5qQSG0Fx5uZ0_mpsUBwbI6lqzkxu1SXuoZjWuP0hU" />
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="icon/apple57.png" />
