Fix 'organisation' word

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          Important: As the owner of the repository you keep complete control over your published content. That also means, all rights and duties that come along with publishing a GitHub Page remain the subject of you.<br>
          Have a look at our <a title="Terms and Conditions" href="terms.html">Terms of Service</a> for more details.
       </p>
-      <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organistation- or Project-Page.</p>
+      <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organisation- or Project-Page.</p>
 
       <section>
          <input id="s1I" type="radio" name="steps" checked />
