--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
          </article>
          <input id="s3I" type="radio" name="steps" />
          <article id="step3">
-            <h3>3</h3>Add a file named &quot;CNAME&quot; to your repo with a single line matching the domain you have chosen (e.g. &quot;foo.js.org&quot; without quotes). If you face problems, check out the section <a title="GitHub Pages Help" rel="nofollow" target="_blank" href="https://help.github.com/articles/setting-up-a-custom-domain-with-github-pages/#creating-and-committing-a-cname-file">Custom URLs</a> at GitHub Pages Help.
+            <h3>3</h3>Add a file named &quot;CNAME&quot; to your repo (in the "gh-pages" branch for project pages) with a single line matching the domain you have chosen (e.g. &quot;foo.js.org&quot; without quotes). If you face problems, check out the section <a title="GitHub Pages Help" rel="nofollow" target="_blank" href="https://help.github.com/articles/setting-up-a-custom-domain-with-github-pages/#creating-and-committing-a-cname-file">Custom URLs</a> at GitHub Pages Help.
          </article>
          <input id="s4I" type="radio" name="steps" />
          <article id="step4">
