--- a/disclaimer.html
+++ b/disclaimer.html
@@ -101,7 +101,7 @@
       <div id="star"></div>
       <a href="disclaimer.html" title="Disclaimer">Disclaimer</a>
       <a href="legals.html" title="Impressum/Legals">Impressum/Legals</a>
-      <span id="contribution">webdesign: <a title="Werbeagentur Ansbach Webdesign" rel="nofollow" target="_blank" href="http://www.derkeim.com">Der Keim</a></span>
+      <span id="contribution">webdesign: <a title="Werbeagentur Ansbach Webdesign" target="_blank" href="http://www.derkeim.com">Der Keim</a></span>
    </footer>
 
    <script>
