--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
          Important: As the owner of the repository you keep complete control over your published content. That also means, all rights and duties that come along with publishing a GitHub Page remain the subject of you.<br>
          Have a look at our <a title="Terms and Conditions" href="terms.html">Terms of Service</a> for more details.
       </p>
-      <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organisation- or Project-Page.</p>
+      <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organisation- or Project-Page (...as long as you provide some reasonable content!)</p>
 
       <section>
          <input id="s1I" type="radio" name="steps" checked />
          <article id="step1">
-            <h3>1</h3>If you haven't already, now it's time to log in to your GitHub account and set up your GitHub Page following the instructions <a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">here</a>. To get a head start you can simply use the generator and one of the provided themes.
+            <h3>1</h3>If you haven't already, now it's time to log in to your GitHub account and set up your GitHub Page following the instructions <a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">here</a>. To get a head start you can simply use the generator and one of the provided themes and add some content to your new page.
          </article>
          <input id="s2I" type="radio" name="steps" />
          <article id="step2">
