--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section>
          <input id="s1I" type="radio" name="steps" checked />
          <article id="step1">
-            <h3>1</h3>If you haven't already, now it's time to log in to your GitHub account and set up your GitHub Page following the instructions <a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">here</a>. To get a head start you can simply use the generator and one of the provided themes and add some content to your new page.
+            <h3>1</h3>If you haven't already, now it's time to log in to your GitHub account and set up your GitHub Page following the instructions <a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">here</a>. To get a head start you can simply use the generator with one of the provided themes and add some content to your new page.
          </article>
          <input id="s2I" type="radio" name="steps" />
          <article id="step2">
