--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
    <footer>
       <div id="star">
-         <p class="ghbtn" data-user="js-org" data-repo="dns" data-type="watch" data-count="1"></p>
+         <p class="ghbtn" data-user="js-org" data-repo="dns.js.org" data-type="watch" data-count="1"></p>
       </div>
       <a href="disclaimer.html" title="Disclaimer">Disclaimer</a>
       <a href="legals.html" title="Impressum/Legals">Impressum/Legals</a>
