--- a/terms.html
+++ b/terms.html
@@ -1,61 +1,9 @@
-﻿<!doctype html>
-<!--[if IE 8]>    <html class="no-js ie8" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="en">
-<!--<![endif]-->
-<head>
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-   <title>JS.ORG | Terms of Service</title>
-   <meta name="description" content="free and short JS.ORG domains for GitHub Pages">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="icon/apple57.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="60x60" href="icon/apple60.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="icon/apple72.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="76x76" href="icon/apple76.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="icon/apple114.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="icon/apple120.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="icon/apple144.png" />
-   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="icon/apple152.png" />
-
-   <meta name="application-name" content="JS.ORG" />
-   <meta name="msapplication-config" content="/browserconfig.xml" />
-
-   <!--[if IE 8]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-      <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
-      <![endif]-->
-   <!--[if lt IE 8]>
-      <meta http-equiv="refresh" content="0; url=http://browsehappy.com/?locale=en" />
-      <script type="text/javascript">window.location.href = "http://browsehappy.com/?locale=en"</script>
-      <style>body {display:none !important}</style>
-      <![endif]-->
-
-   <script>
-      var doc = document.documentElement;
-      doc.className = doc.className.replace("no-js", "");
-   </script>
-
-   <![if !IE 8]>
-   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Serif+Pro|Source+Code+Pro' rel='stylesheet' type='text/css'>
-   <![endif]>
-
-   <link href="css/main.min.css" rel="stylesheet" />
-</head>
-<body>
-
-   <header>
-      <a id="logo" class="icon" title="JS.ORG | free and short JS.ORG domains for GitHub Pages" href="http://js.org">&#xe000; &#xe001;</a>
-      <ul id="social" class="icon" class="">
-         <li><a class="facebook" title="Facebook" rel="nofollow" target="_blank" href="https://www.facebook.com/pages/JSORG/599873160157196">&#xe100;</a></li>
-         <li><a class="twitter" title="Twitter" rel="nofollow" target="_blank" href="https://twitter.com/JS_ORG">&#xe110;</a></li>
-         <li><a class="googleplus" title="Google+" rel="nofollow" target="_blank" href="https://plus.google.com/+JsOrg0">&#xe120;</a></li>
-      </ul>
-      <h1 class="serif">Providing nice and free domains for GitHub Pages since 2015</h1>
-   </header>
-
-   <main style="font-size:.8em">
+---
+layout: default
+bg: true
+ghstars: dns.js.org
+---
+<main style="font-size:.8em">
       <h1>Terms and Conditions of the service "JS.ORG | DNS"</h1>
       <div>
          <h3>§ 1 Principles</h3>
@@ -160,26 +108,3 @@
          <p><b>April 2015</b></p>
       </div>
    </main>
-
-   <footer>
-      <div id="star"></div>
-      <a href="disclaimer.html" title="Disclaimer">Disclaimer</a>
-      <a href="legals.html" title="Impressum/Legals">Impressum/Legals</a>
-      <span id="contribution">webdesign: <a title="Werbeagentur Ansbach Webdesign" target="_blank" href="http://www.derkeim.com">Der Keim</a></span>
-   </footer>
-
-   <script>
-      (function (i, s, o, g, r, a, m) {
-         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-         }, i[r].l = 1 * new Date(); a = s.createElement(o),
-         m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-      ga('create', 'UA-59246932-1', 'auto');
-      ga('set', 'anonymizeIp', true);
-      ga('send', 'pageview');
-   </script>
-
-</body>
-</html>
