--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ hermes: true
 
    <h4>We truly appreciate your support by spreading some code!</h4>
    <code>
-      &lt;a href="http://js.org" <wbr>target="_blank" <wbr>title="JS.ORG | JavaScript Community"&gt;<br>
-      &lt;img src="http://logo.js.org/dark_horz.png" <wbr>width="102" <wbr>alt="JS.ORG Logo"/&gt;<wbr>&lt;/a&gt;<br>
+      &lt;a href="https://js.org" <wbr>target="_blank" <wbr>title="JS.ORG | JavaScript Community"&gt;<br>
+      &lt;img src="https://logo.js.org/dark_horz.png" <wbr>width="102" <wbr>alt="JS.ORG Logo"/&gt;<wbr>&lt;/a&gt;<br>
       &lt;!-- alternatives [bright|dark]_[horz|vert|tiny].png (width[horz:102,vert:50,tiny:77]) --&gt;
    </code>
