--- a/terms.html
+++ b/terms.html
@@ -9,9 +9,9 @@ ghstars: dns.js.org
          <h3>§ 1 Principles</h3>
          <ol>
             <li>JS.ORG | DNS is a free service provided by the owner of JS.ORG as stated in the legals. The service will be only called "JS.ORG". All services are incumbent upon these terms and conditions.</li>
-            <li>JS.ORG accompanies and extends the service "GitHub Pages" provided by GitHub, Inc ("GitHub"). JS.ORG provides free subdomains underneath the domain "js.org" to be used as a custom URL for a GitHub Page</li>
+            <li>JS.ORG accompanies and extends the service "GitHub Pages" provided by GitHub, Inc ("GitHub"). JS.ORG provides free subdomains underneath the domain "js.org" to be used as a custom URL for a GitHub Page.</li>
             <li>The Terms of the GitHub service and all rights of GitHub, Inc remain unaffected by the terms of JS.ORG.</li>
-            <li>Communication between JS.ORG and the user will take place on GitHub in the form of issues, pull requests or comments</li>
+            <li>Communication between JS.ORG and the user will take place on GitHub in the form of issues, pull requests or comments.</li>
             <li>By submitting a pull request in the GitHub repo that accompanies and hosts JS.ORG with the wish to add a record to the list of domains, the user attends the JS.ORG service and accepts the terms and conditions as the sole basis of all services provided by JS.ORG.</li>
          </ol>
       </div>
@@ -26,7 +26,7 @@ ghstars: dns.js.org
          <h3>§ 3 Termination</h3>
          <ol>
             <li>Both sides can terminate at any time without stating any reasons.</li>
-            <li>The user cancels the service by removing the CNAME file in their repository and filing a pull request in the repository of JS.ORG with the wish to remove their subdomain from the list of active JS.ORG domains</li>
+            <li>The user cancels the service by removing the CNAME file in their repository and making a pull request in the repository of JS.ORG with the wish to remove their subdomain from the list of active JS.ORG domains.</li>
             <li>JS.ORG may also terminate the provision of a certain or all subdomains. Concerned users will be notified at least 7 days in advance by an issue in their GitHub repository</li>
          </ol>
       </div>
@@ -34,15 +34,15 @@ ghstars: dns.js.org
       <div>
          <h3>§ 4 Rights and Duties of the user</h3>
          <p>A transfer of a GitHub Page together with its JS.ORG subdoamin is allowed as long as the new users accepts these terms and conditions, in particular § 2 of the terms (no property right). The user receives a non-exclusive right from JS.ORG to use the service. The use permit expires with cancellation of the conctractual agreement.</p>
-         <p>The user is fully responsible for the content provided by its GitHub Page, and is also responsible to to extricate JS.ORG from all third party claims. The user warrants not to transmit any material that violates the rights of others or violates statutory provisions.</p>
+         <p>The user is fully responsible for the content provided by its GitHub Page, and is also responsible to extricate JS.ORG from all third party claims. The user warrants not to transmit any material that violates the rights of others or violates statutory provisions.</p>
          <p>In particular providing content like the following is prohibited:</p>
          <ul>
             <li>Piracy (warez , videos , MP3s , DVDs , software, etc.)</li>
             <li>Phishing, scam , malware , viruses</li>
             <li>Copyright offense</li>
-            <li>Dubious business models ( eg, pyramid schemes, chain letters , etc. )</li>
+            <li>Dubious business models (eg, pyramid schemes, chain letters , etc.)</li>
             <li>Content that is unlawful, obscene, threatening, abusive, libelous, or scandalous</li>
-            <li>Content which led to committing criminal acts or acts that undermine the civil order, or otherwise contrary to local, national or international laws</li>
+            <li>Content which led to committing criminal acts or acts that undermine the civil order, or otherwise contrary to national or international laws</li>
             <li>Pornography or content intended for adults only</li>
             <li>Unsecured Web 2.0 platforms (eg. no captcha protection in forums , blogs , guest books)</li>
             <li>File-/Imagehoster</li>
@@ -55,7 +55,7 @@ ghstars: dns.js.org
       <div>
          <h3>§ 5 Limitation of Liability</h3>
          <ul>
-            <li>In principle JS.ORG takes no responsability for the support. The use of the provided services of JS.ORG takes place at your own risk. This refers in particular to the functionality, availability and freedom from viruses of the provided services as well as damage caused by the use of programs, program components and scripts/applets. The user is obliged to create local copies of all his data at JS.ORG for security reasons and regularly to secure all stored databases and data. JS.ORG indicates that JS.ORG is a free service and does not create data backups of the users.</li>
+            <li>In principle JS.ORG takes no responsability for the support. The use of the provided services of JS.ORG takes place at your own risk. This refers in particular to the functionality, availability and freedom from viruses of the provided services as well as damage caused by the use of programs, program components and scripts/applets. The user is obliged to create local copies of all his data at JS.ORG for security reasons and regularly to secure all stored databases and data. JS.ORG indicates that JS.ORG is a free service and does not create data backups for the users.</li>
             <li>The user is liable for any use of the service performed by his GitHub user account. Legal representatives are liable for minors. The user therefore has to ensure that his access can not be misused by third parties.</li>
             <li>JS.ORG provides the service without any express or implied warranties. JS.ORG is not liable for inadvertent disclosure, damage or loss of the systems of transmitted, received or stored data from JS.ORG. The user expressly acknowledges that these terms also effect third party supplies.</li>
             <li>For the purposed service usage as described above JS.ORG solely assume the liability for the injury to life, limb and health, and other damages caused by gross neglect of duty on JS.ORG</li>
@@ -87,7 +87,7 @@ ghstars: dns.js.org
 
       <div>
          <h3>§ 10 Place of jurisdiction</h3>
-         <p>Service provisiion and the usage of the service according to these terms and conditions is exclusively subject to the application of the law of the Federal Republic of Germany. Application of conflict of laws of private international law is expressly excluded.</p>
+         <p>Service provision and the usage of the service according to these terms and conditions is exclusively subject to the application of the law of the Federal Republic of Germany. Application of conflict of laws of private international law is expressly excluded.</p>
          <p>The place of jurisdiction for JS.ORG is Munich, the residence of the owner of JS.ORG as stated in the legals.</p>
          <p>For disputes with users who are defined as contractors after §14 BGB, Munich is agreed as place of jurisdiction. For users who do not have general jurisdiction and no resident in Germany at the time of the commencement of proceedings, Munich will be the place of jurisdiction.</p>
          <p>For users, who are consumers within the meaning. § 13 BGB, the general jurisdiction of the domicile will remain in Munich.</p>
@@ -95,7 +95,6 @@ ghstars: dns.js.org
 
       <div>
          <h3>§ 11 Change of Terms</h3>
-
          <p>JS.ORG reserves the right to make changes to the Terms of Service. The user will be informed by JS.ORG of the changes through a notice in the readme section of the JS.ORG repository.</p>
       </div>
 
