--- a/terms.html
+++ b/terms.html
@@ -67,7 +67,7 @@ ghstars: dns.js.org
 
       <div>
          <h3>§ 6 Name of the subdomain</h3>
-         <p>Each user can select the names of subdomains in accordance to the URL provided by the GitHub Pages service and with respect to a public availabe list of restricted names published in the JS.ORG repository. It is sole responsibility of the user to consider whether the name is contrary to statutory provisions, third party rights (including trade marks or registered rights), or morality. If this is the case, the registration of the subdomain is to be omitted. The same applies to subdomains, whose name is misleading, or suspect websites which are excluded of the participation in the service because of their content according to § 4.</p>
+         <p>Each user can select the names of subdomains in accordance to the URL provided by the GitHub Pages service and with respect to a public available list of restricted names published in the JS.ORG repository. It is sole responsibility of the user to consider whether the name is contrary to statutory provisions, third party rights (including trade marks or registered rights), or morality. If this is the case, the registration of the subdomain is to be omitted. The same applies to subdomains, whose name is misleading, or suspect websites which are excluded of the participation in the service because of their content according to § 4.</p>
       </div>
 
       <div>
