--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ hermes: true
       </article>
       <input id="s3I" type="radio" name="steps">
       <article id="step3">
-         <h3>3</h3>Add a file named "CNAME" to your repo (in the "gh-pages" branch for project pages) with a single line matching the domain you have chosen (e.g. "foo.js.org" without quotes). If you face problems, check out the section <a title="GitHub Pages Help" rel="nofollow" target="_blank" href="https://help.github.com/articles/setting-up-a-custom-domain-with-github-pages/#creating-and-committing-a-cname-file">Custom URLs</a> at GitHub Pages Help.
+         <h3>3</h3>Add a file named "CNAME" to your repo (in the "gh-pages" branch for project pages) with a single line matching the domain you have chosen (e.g. "foo.js.org" without quotes). If you prefer to fill a form, have a look at <a title="GitHub Pages Help" rel="nofollow" target="_blank" href="https://help.github.com/articles/adding-or-removing-a-custom-domain-for-your-github-pages-site">GitHub Pages Help</a>.
       </article>
       <input id="s4I" type="radio" name="steps">
       <article id="step4">
