--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ hermes: true
       </article>
       <input id="s4I" type="radio" name="steps">
       <article id="step4">
-         <h3>4</h3>To finish the procedure, make a pull request in our GitHub <a rel="nofollow" target="_blank" href="https://github.com/js-org/dns/tree/master">repository</a> that adds your subdomain to the list of exisiting JS.ORG domains. Your new URL should go live within 24 hours (keep an eye on your pull request in case of a naming conflict).
+         <h3>4</h3>To finish the procedure, make a pull request in our GitHub <a rel="nofollow" target="_blank" href="https://github.com/js-org/dns/tree/master">repository</a> that adds your subdomain to the list of exisiting JS.ORG domains. Your new URL should go live within 24 hours (keep an eye on your pull request in case of a naming conflict or questions from our side).
       </article>
       <nav>
          <label id="s1L" for="s1I">1</label>
