Fix a few typos and improve grammar

--- a/terms.html
+++ b/terms.html
@@ -37,15 +37,15 @@ ghstars: dns.js.org
          <p>The user is fully responsible for the content provided by its GitHub Page, and is also responsible to extricate JS.ORG from all third party claims. The user warrants not to transmit any material that violates the rights of others or violates statutory provisions.</p>
          <p>In particular providing content like the following is prohibited:</p>
          <ul>
-            <li>Piracy (warez , videos , MP3s , DVDs , software, etc.)</li>
-            <li>Phishing, scam , malware , viruses</li>
+            <li>Piracy (warez, videos, MP3s, DVDs, software, etc.)</li>
+            <li>Phishing, scam, malware, viruses</li>
             <li>Copyright offense</li>
-            <li>Dubious business models (eg, pyramid schemes, chain letters , etc.)</li>
+            <li>Dubious business models (eg, pyramid schemes, chain letters, etc.)</li>
             <li>Content that is unlawful, obscene, threatening, abusive, libelous, or scandalous</li>
             <li>Content which led to committing criminal acts or acts that undermine the civil order, or otherwise contrary to national or international laws</li>
             <li>Pornography or content intended for adults only</li>
-            <li>Unsecured Web 2.0 platforms (eg. no captcha protection in forums , blogs , guest books)</li>
-            <li>File-/Imagehoster</li>
+            <li>Unsecured Web 2.0 platforms (eg. no captcha protection in forums, blogs, guest books)</li>
+            <li>File or Image hosting</li>
             <li>Sites with other illegal content</li>
          </ul>
          <p>A violation of these rules will result in immediate deletion of the JS.ORG domain.</p>
@@ -72,7 +72,7 @@ ghstars: dns.js.org
 
       <div>
          <h3>§ 7 Absolute ban of spam</h3>
-         <p>References to domains registered at JS.ORG in unsolicited commercial e-mail or similar media (spam) are not allowed. The mass registering of domains for the purpose of irritation to the users of search engines are a match for spam and is also inadmissible.</p>
+         <p>References to domains registered at JS.ORG in unsolicited commercial e-mail or similar media (spam) are not allowed. The mass registering of domains for the purpose of irritation to the users of search engines are also considered spam and are also inadmissible.</p>
       </div>
 
       <div>
@@ -82,7 +82,7 @@ ghstars: dns.js.org
 
       <div>
          <h3>§ 9 Responsibility</h3>
-         <p>JS.ORG is not responsible for the names of subdomains for the content of external websites that are registered as link destinations of subdomains, or otherwise linked to this service.</p>
+         <p>JS.ORG is not responsible for the names of subdomains or the content of external websites that are registered as link destinations of subdomains, or otherwise linked to this service.</p>
       </div>
 
       <div>
