--- a/terms.html
+++ b/terms.html
@@ -33,7 +33,7 @@ ghstars: dns.js.org
 
       <div>
          <h3>§ 4 Rights and Duties of the user</h3>
-         <p>A transfer of a GitHub Page together with its JS.ORG subdoamin is allowed as long as the new users accepts these terms and conditions, in particular § 2 of the terms (no property right). The user receives a non-exclusive right from JS.ORG to use the service. The use permit expires with cancellation of the conctractual agreement.</p>
+         <p>A transfer of a GitHub Page together with its JS.ORG subdomain is allowed as long as the new users accepts these terms and conditions, in particular § 2 of the terms (no property right). The user receives a non-exclusive right from JS.ORG to use the service. The use permit expires with cancellation of the conctractual agreement.</p>
          <p>The user is fully responsible for the content provided by its GitHub Page, and is also responsible to extricate JS.ORG from all third party claims. The user warrants not to transmit any material that violates the rights of others or violates statutory provisions.</p>
          <p>In particular providing content like the following is prohibited:</p>
          <ul>
