--- a/terms.html
+++ b/terms.html
@@ -9,8 +9,8 @@ ghstars: dns.js.org
          <h3>§ 1 Principles</h3>
          <ol>
             <li>JS.ORG | DNS is a free service provided by the owner of JS.ORG as stated in the legals. The service will be only called "JS.ORG". All services are incumbent upon these terms and conditions.</li>
-            <li>JS.ORG accompanies and extends the service "GitHub Pages" provided by GitHub, Inc ("GitHub"). JS.ORG provides free subdomains underneath the domain "js.org" to be used as a custom URL for a GitHub Page.</li>
-            <li>The Terms of the GitHub service and all rights of GitHub, Inc remain unaffected by the terms of JS.ORG.</li>
+            <li>JS.ORG accompanies and extends the service "GitHub Pages" provided by GitHub, Inc. ("GitHub"). JS.ORG provides free subdomains underneath the domain "js.org" to be used as a custom URL for a GitHub Page.</li>
+            <li>The Terms of the GitHub service and all rights of GitHub, Inc. remain unaffected by the terms of JS.ORG.</li>
             <li>Communication between JS.ORG and the user will take place on GitHub in the form of issues, pull requests or comments.</li>
             <li>By submitting a pull request in the GitHub repo that accompanies and hosts JS.ORG with the wish to add a record to the list of domains, the user attends the JS.ORG service and accepts the terms and conditions as the sole basis of all services provided by JS.ORG.</li>
          </ol>
@@ -33,7 +33,7 @@ ghstars: dns.js.org
 
       <div>
          <h3>§ 4 Rights and Duties of the user</h3>
-         <p>A transfer of a GitHub Page together with its JS.ORG subdomain is allowed as long as the new users accepts these terms and conditions, in particular § 2 of the terms (no property right). The user receives a non-exclusive right from JS.ORG to use the service. The use permit expires with cancellation of the conctractual agreement.</p>
+         <p>A transfer of a GitHub Page together with its JS.ORG subdomain is allowed as long as the new users accepts these terms and conditions, in particular § 2 of the terms (no property right). The user receives a non-exclusive right from JS.ORG to use the service. The use permit expires with cancellation of the contractual agreement.</p>
          <p>The user is fully responsible for the content provided by its GitHub Page, and is also responsible to extricate JS.ORG from all third party claims. The user warrants not to transmit any material that violates the rights of others or violates statutory provisions.</p>
          <p>In particular providing content like the following is prohibited:</p>
          <ul>
@@ -49,14 +49,14 @@ ghstars: dns.js.org
             <li>Sites with other illegal content</li>
          </ul>
          <p>A violation of these rules will result in immediate deletion of the JS.ORG domain.</p>
-         <p>The user is obliged to publish legals on his website which contains at least the full name, mailing address and an e-mail adress.</p>
+         <p>The user is obliged to publish legals on his website which contains at least the full name, mailing address and an e-mail address.</p>
       </div>
 
       <div>
          <h3>§ 5 Limitation of Liability</h3>
          <ul>
-            <li>In principle JS.ORG takes no responsability for the support. The use of the provided services of JS.ORG takes place at your own risk. This refers in particular to the functionality, availability and freedom from viruses of the provided services as well as damage caused by the use of programs, program components and scripts/applets. The user is obliged to create local copies of all his data at JS.ORG for security reasons and regularly to secure all stored data. JS.ORG indicates that JS.ORG is a free service and does not create data backups for the users.</li>
-            <li>The user is liable for any use of the service performed by his GitHub user account. Legal representatives are liable for minors. The user therefore has to ensure that his access can not be misused by third parties.</li>
+            <li>In principle JS.ORG takes no responsibility for the support. The use of the provided services of JS.ORG takes place at your own risk. This refers in particular to the functionality, availability and freedom from viruses of the provided services as well as damage caused by the use of programs, program components and scripts/applets. The user is obliged to create local copies of all his data at JS.ORG for security reasons and regularly to secure all stored data. JS.ORG indicates that JS.ORG is a free service and does not create data backups for the users.</li>
+            <li>The user is liable for any use of the service performed by his GitHub user account. Legal representatives are liable for minors. The user therefore has to ensure that his access cannot be misused by third parties.</li>
             <li>JS.ORG provides the service without any express or implied warranties. JS.ORG is not liable for inadvertent disclosure, damage or loss of transmitted, received or stored data from JS.ORG. The user expressly acknowledges that these terms also effect third party supplies.</li>
             <li>For the purposed service usage as described above JS.ORG solely assume the liability for the injury to life, limb and health, and other damages caused by gross neglect of duty on JS.ORG</li>
             <li>A liability of JS.ORG for slight negligence exists only for breach of an essential contractual obligation</li>
@@ -67,7 +67,7 @@ ghstars: dns.js.org
 
       <div>
          <h3>§ 6 Name of the subdomain</h3>
-         <p>Each user can select the names of subdomains in accordance to the URL provided by the GitHub Pages service and with respect to a public available list of restricted names published in the JS.ORG repository. It is sole responsibility of the user to consider whether the name is contrary to statutory provisions, third party rights (including trade marks or registered rights), or morality. If this is the case, the registration of the subdomain is to be omitted. The same applies to subdomains, whose name is misleading, or suspect websites which are excluded of the participation in the service because of their content according to § 4.</p>
+         <p>Each user can select the names of subdomains in accordance to the URL provided by the GitHub Pages service and with respect to a public available list of restricted names published in the JS.ORG repository. It is sole responsibility of the user to consider whether the name is contrary to statutory provisions, third party rights (including trademarks or registered rights), or morality. If this is the case, the registration of the subdomain is to be omitted. The same applies to subdomains, whose name is misleading, or suspect websites which are excluded of the participation in the service because of their content according to § 4.</p>
       </div>
 
       <div>
