--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ hermes: true
 <a id="ad" href="https://javascript-conference.com/?utm_source=jsnews&amp;utm_medium=banner&amp;utm_campaign=mediapartner" title="International JavaScript Conference" target="_blank" rel="nofollow"> <img src="https://js.org/img/IJS_2017_Banner_970x90_41212_infinite.gif" alt="International JavaScript Conference; October 23-27 2017, Munich"><label>Advertisement</label></a>
     
 <p>Important: As the owner of the repository you keep complete control over your published content. That also means, all rights and duties that come along with publishing a GitHub Page remain the subject of you.<br>Have a look at our <strong><a title="Terms and Conditions" href="terms.html">Terms of Service</a></strong> for more details.</p>
-   <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organisation- or Project-Page (...as long as you provide some reasonable content!)</p>
+   <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organization- or Project-Page (...as long as you provide some reasonable content!)</p>
 
    <section>
       <input id="s1I" type="radio" name="steps" checked="">
@@ -33,7 +33,7 @@ hermes: true
       </article>
       <input id="s4I" type="radio" name="steps">
       <article id="step4">
-         <h3>4</h3>To finish the procedure, make a pull request in our GitHub <a rel="nofollow" target="_blank" href="https://github.com/js-org/dns/tree/master">repository</a> that adds your subdomain to the list of exisiting JS.ORG domains. Your new URL should go live within 24 hours (keep an eye on your pull request in case of a naming conflict).
+         <h3>4</h3>To finish the procedure, make a pull request in our GitHub <a rel="nofollow" target="_blank" href="https://github.com/js-org/dns/tree/master">repository</a> that adds your subdomain to the list of existing JS.ORG domains. Your new URL should go live within 24 hours (keep an eye on your pull request in case of a naming conflict).
       </article>
       <nav>
          <label id="s1L" for="s1I">1</label>
