--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@ zodiac: true
 hermes: true
 ---
 <p id="typewriter">http://<span id="hermes">foo</span>.js.org</p>
-   <p class="bigger">You are a JavaScript developer looking for free webspace to host your project? Check out <strong><a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">GitHub Pages</a></strong>. To make things perfect we provide you with a free and sleek URL as shown in the examples above.</p>
+   <p class="bigger">Are you a JavaScript developer looking for free webspace to host your project? Check out <strong><a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">GitHub Pages</a></strong>. To make things perfect we provide you with a free and sleek URL as shown in the examples above.</p>
     
-<p>Important: As the owner of the repository you keep complete control over your published content. That also means, all rights and duties that come along with publishing a GitHub Page remain the subject of you.<br>Have a look at our <strong><a title="Terms and Conditions" href="terms.html">Terms of Service</a></strong> for more details.</p>
-   <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organization- or Project-Page (...as long as you provide some reasonable content!)</p>
+<p>Important: As the owner of the repository you keep complete control over your published content. That also means that all rights and duties that come along with publishing a GitHub Page remain your priority.<br>Have a look at our <strong><a title="Terms and Conditions" href="terms.html">Terms of Service</a></strong> for more details.</p>
+   <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organization- or Project-Page. (...as long as you provide some reasonable content!)</p>
 
    <section>
       <input id="s1I" type="radio" name="steps" checked="">
       <article id="step1">
-         <h3>1</h3>If you haven't already, now it's time to log in to your GitHub account and set up your GitHub Page following the instructions <a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">here</a>. To get a head start you can simply use the generator with one of the provided themes and add some content to your new page.
+         <h3>1</h3>If you haven't already, now it's time to log in to your GitHub account and set up your GitHub Page by following the instructions <a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">here</a>. To get a head start you can simply use the generator with one of the provided themes and add some content to your new page.
       </article>
       <input id="s2I" type="radio" name="steps">
       <article id="step2">
