--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ hermes: true
 <p id="typewriter">http://<span id="hermes">foo</span>.js.org</p>
    <p class="bigger">Are you a JavaScript developer looking for free webspace to host your project? Check out <strong><a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">GitHub Pages</a></strong>. To make things perfect we provide you with a free and sleek URL as shown in the examples above.</p>
     
-<p>Important: As the owner of the repository you keep complete control over your published content. That also means that all rights and duties that come along with publishing a GitHub Page remain your priority.<br>Have a look at our <strong><a title="Terms and Conditions" href="terms.html">Terms of Service</a></strong> for more details.</p>
+<p>Important: As the owner of the repository you keep complete control over your published content. That also means that all rights and duties that come along with publishing a GitHub Page remain your duty.<br>Have a look at our <strong><a title="Terms and Conditions" href="terms.html">Terms of Service</a></strong> for more details.</p>
    <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organization- or Project-Page. (...as long as you provide some reasonable content!)</p>
 
    <section>
@@ -22,7 +22,7 @@ hermes: true
       </article>
       <input id="s3I" type="radio" name="steps">
       <article id="step3">
-         <h3>3</h3>Add a file named "CNAME" to your repo (in the "gh-pages" branch for project pages) with a single line matching the domain you have chosen (e.g. "foo.js.org" without quotes). If you face problems, check out the section <a title="GitHub Pages Help" rel="nofollow" target="_blank" href="https://help.github.com/articles/setting-up-a-custom-domain-with-github-pages/#creating-and-committing-a-cname-file">Custom URLs</a> at GitHub Pages Help.
+         <h3>3</h3>Add a file named "CNAME" to your repo (in the "gh-pages" branch for project pages) with a single line matching the domain you have chosen (e.g. "foo.js.org" without quotes). If you face any problems, check out the section <a title="GitHub Pages Help" rel="nofollow" target="_blank" href="https://help.github.com/articles/setting-up-a-custom-domain-with-github-pages/#creating-and-committing-a-cname-file">Custom URLs</a> at GitHub Pages Help.
       </article>
       <input id="s4I" type="radio" name="steps">
       <article id="step4">
